Add solution for bonus iteration 7

--- a/views/partials/beerpartial.hbs
+++ b/views/partials/beerpartial.hbs
@@ -1,6 +1,6 @@
 <div class="beerpartial-container">
     <div class="beerpartial-img">
-        <img src={{this.image_url}}>    
+        <a href="/beers/{{this.id}}"><img src={{this.image_url}}></a>
     </div>
     <div class="beerpartial-infos">
         <h1>{{this.name}}</h1>
